# webull-openapi-AI-Plugin

./: .gitignore  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-07-17-webull-trade-api-plugin.md
examples/: historical-bars.body.json  stock-snapshot.query.json
references/: __init__.py  authentication.md  endpoints.json  openapi.json
scripts/: __init__.py  build_openapi_reference.py  webull_api.py
skills/webull-account/: SKILL.md
skills/webull-account/agents/: openai.yaml
skills/webull-auth/: SKILL.md
skills/webull-auth/agents/: openai.yaml
skills/webull-events/: SKILL.md
skills/webull-events/agents/: openai.yaml
skills/webull-market-data/: SKILL.md
skills/webull-market-data/agents/: openai.yaml
skills/webull-orders/: SKILL.md
skills/webull-orders/agents/: openai.yaml
skills/webull-watchlists/: SKILL.md
skills/webull-watchlists/agents/: openai.yaml
tests/: test_plugin_contract.py  test_webull_api.py
