[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "webull-openapi"
version = "0.2.0"
description = "Public skills and a signed runtime for the Webull Thailand OpenAPI."
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["scripts*", "references*"]

[tool.setuptools.package-data]
references = ["endpoints.json", "authentication.md"]

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__/*", "*.pyc"]

[project.scripts]
webull-api = "scripts.webull_api:main"

[project.optional-dependencies]
test = [
  "pytest>=8",
]

[tool.pytest.ini_options]
pythonpath = ["."]
